<resources>
    <string name="app_name">Hackville</string>
    <string-array name="interests">
        <item>General Chat</item>
        <item>Cars</item>
        <item>Sports</item>
        <item>Vacations</item>
        <item>Gardening</item>
        <item>Music</item>
        <item>Books</item>
        <item>Movies</item>
    </string-array>
    <string name="text_to_speech_label">Press the button below for text to speech.</string>
    <string name="button_yes_label">Yes</string>
    <string name="button_no_label">No</string>

    <string name="button_new_penpal">Find a new Penpal</string>

    <string name="button_speak_label">Speak</string>
    <string name="button_ok_label">Ok</string>
    <string name="txt_Login">Login</string>
    <string name="txt_signup">signup</string>
    <string name="txt_email">email</string>
    <string name="txt_password">password</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
